Modified: dWC/exercise_2.html

--- a/dWC/exercise_2.html
+++ b/dWC/exercise_2.html
@@ -5,14 +5,15 @@
         <title>Inversão de Valores a > b | b > a</title>
         <script>
             var idade = prompt("Digite sua idade: ")
-            if (0 <= idade > 15) {
-                alert('Criança.')
-            } else if (15 <= idade < 30) {
-                alert("Jovem.")
-            } else if (30 <= idade < 60) {
-                alert("Adulto")
-            } else {
-                alert("Idoso")
+            if(idade >= 0 && idade < 15){ 
+                alert('Criança'); 
+            } else if(idade >= 15 && idade < 30){ 
+                alert('Jovem'); 
+            } else if(idade >= 30 && idade < 60){ 
+                alert('Adulto');     
+            } else { 
+                alert('Idoso'); 
+
             }
         </script>
     </head>
