--- a/dWC/exercise_2.html
+++ b/dWC/exercise_2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Inversão de Valores a > b | b > a</title>
+        <title>Switch em JavaScript</title>
         <script>
             var idade = prompt("Digite sua idade: ")
             if(idade >= 0 && idade < 15){ 
@@ -19,6 +19,6 @@
     </head>
 
     <body>
-        <h1>Inversão de Valores/Variáveis</h1>
+        <h1>Switch em JavaScript</h1>
     </body:>
 </html>
