Modified: Fundamentos/funcoes_Datas.hmtml

--- a/Fundamentos/funcoes_Datas.html
+++ b/Fundamentos/funcoes_Datas.html
@@ -10,6 +10,11 @@
             var data = new Date()
                 //Todos os parâmetos de Date() são obtidos através da hora do sistema operacional do usuário
             
+
+            //.toString(): Converte a data atual p/ string
+            document.write(data.toString()) //Invocando e exibindo
+            document.write('<br/>')
+            
             //-----------------------------------------------------------------------------------
             //.getDate() : Busca o DIA atual
             document.write(data.getDate()) //Invocando e exibindo 
