--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -97,7 +97,9 @@
     </form>
 </section>
 
-	<script src="js/principal.js"></script>	
+	<script src="js/caculaImc.js"></script>	
+	<script src="js/form.js"></script>	
+
 
 	</body>
 </html>
