--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -31,7 +31,7 @@
 					<tbody id="tabela-pacientes">
 						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
-							<td class="info-peso">1000</td>
+							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
@@ -75,6 +75,7 @@
 		<br>
 <section class="container">
     <h2 id="titulo-form">Adicionar novo paciente</h2>
+	<ul id="mensagens-erro" ></ul>
     <form id="form-adiciona">
         <div class="grupo">
             <label for="nome">Nome:</label>
@@ -99,7 +100,7 @@
 
 	<script src="js/caculaImc.js"></script>	
 	<script src="js/form.js"></script>	
-
+	<script src="js/removePaciente.js"></script>	
 
 	</body>
 </html>
