--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -102,7 +102,8 @@
 
 	<script src="js/caculaImc.js"></script>	
 	<script src="js/form.js"></script>	
-	<script src="js/removePaciente.js"></script>	
+	<script src="js/removePaciente.js"></script>
+	<script src="js/filtra.js"></script>
 
 	</body>
 </html>
