Final commit: project done

--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -72,6 +72,7 @@
 					</tbody>
 				</table>
 				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
+				<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
 			</section>
 		</main>
 		<br>
