docs: add groups to regExp fundamentals

--- a/Javascript/Fundamentos_Js/regExp.html
+++ b/Javascript/Fundamentos_Js/regExp.html
@@ -39,6 +39,12 @@
     // ^ - seleciona o início da string alvo., garante que nada deve vir antes da âncora.
     // $ - seleciona o fim do alvo, garante que nada deve vir depois da âncora.
 
+// Grupos:
+    // (0123) - tudo que está entre parentêses é um grupo.
+    // (?:123) - Non-capturing-group = ao usar '?:' no ínicio de um grupo, tornamos ele opcional (pode ou não aparecer).
+    // (alfa|beta) - grupo seletivo, um OU outro (alfa OU beta).s
+
+
 </script>
 </head>
 <body>
