docs: add backreferences to regExp fundamentals

--- a/Javascript/Fundamentos_Js/regExp.html
+++ b/Javascript/Fundamentos_Js/regExp.html
@@ -45,6 +45,8 @@
     // (0123) - tudo que está entre parentêses é um grupo.
     // (?:123) - Non-capturing-group = ao usar '?:' no ínicio de um grupo, tornamos ele opcional (pode ou não aparecer).
     // (alfa|beta) - grupo seletivo, um OU outro (alfa OU beta).
+    // \nº - podemos referenciar um certo grupo utilizando \ seguido do número do grupo.
+        //OBS: o grupo 0 é a própria frase, logo, a partir do 1 são os grupos selecionados pela RegExp.
 
 
 </script>
