docs: refactor regExp.html

--- a/Javascript/Fundamentos_Js/regExp.html
+++ b/Javascript/Fundamentos_Js/regExp.html
@@ -16,7 +16,7 @@
     //Não há necessidade de escape de '\'.
     //   /suaRegExp/modificadoresDaRegExp.
 
-// Alguns parâmetros:
+// Alguns Modificadores:
     // g - aplica a RegExp globalmente, ou seja, quantas vezes aparecer.
     // i - desabilita case insensitivity.
     // c - abilita case sensitivity.
@@ -24,7 +24,9 @@
 // Alguns métodos:
     // .test - testa a RegExp no alvo e retorna true ou false.
     // .exec - testa a RegExp e retorna as correspondências encontradas.
-    
+    // .replace -  recebe uma RegExp como 1º parâmetro e o 2º como o novo texto que
+                // deve substituir todos os lugares que condizerem com a expressão passada.
+
 // Classses:
     // \t - é um tab.
     // \r - é carriage return.  
