refactor: now works with modules

--- a/Javascript/javascriptCRUD/projeto_inicial/admin/telas/lista_cliente.html
+++ b/Javascript/javascriptCRUD/projeto_inicial/admin/telas/lista_cliente.html
@@ -54,7 +54,7 @@
     </main>
 </body> 
 
-<script src="../service/cliente_service.js"></script>
+<script type="module" src="../controller/listaClientes_Controller.js"></script>
 
 </html>
 
